Motoman/MotoComSDK/motocom32dll/header/vb.net/MotoCom32.vb

	Declare Function BscMovEx Lib "MotoCom32"  Alias "_BscMovEx@40"(ByVal nCid As Short, ByVal movtype As String, ByVal vtype As String, ByVal spd As Double, ByVal framename As String, ByVal rconf As Integer, ByVal toolno As Short, ByRef p As Double, ByVal axisNum As Short) As Short
	Declare Function BscMovj Lib "MotoCom32"  Alias "_BscMovj@28"(ByVal nCid As Short, ByVal spd As Double, ByVal framename As String, ByVal rconf As Short, ByVal toolno As Short, ByRef p As Double) As Short
	Declare Function BscMovjEx Lib "MotoCom32"  Alias "_BscMovjEx@32"(ByVal nCid As Short, ByVal spd As Double, ByVal framename As String, ByVal rconf As Integer, ByVal toolno As Short, ByRef p As Double, ByVal axisNum As Short) As Short
	Declare Function BscMovl Lib "MotoCom32"  Alias "_BscMovl@32"(ByVal nCid As Short, ByVal vtype As String, ByVal spd As Double, ByVal framename As String, ByVal rconf As Short, ByVal toolno As Short, ByRef p As Double) As Short
	Declare Function BscMovlEx Lib "MotoCom32"  Alias "_BscMovlEx@36"(ByVal nCid As Short, ByVal vtype As String, ByVal spd As Double, ByVal framename As String, ByVal rconf As Integer, ByVal toolno As Short, ByRef p As Double, ByVal axisNum As Short) As Short
	Declare Function BscOpen Lib "MotoCom32"  Alias "_BscOpen@8"(ByVal path As String, ByVal mode As Short) As Short
	Declare Function BscOPLock Lib "MotoCom32"  Alias "_BscOPLock@4"(ByVal nCid As Short) As Short
	Declare Function BscOPUnLock Lib "MotoCom32"  Alias "_BscOPUnLock@4"(ByVal nCid As Short) As Short
	Declare Function BscOutBytes Lib "MotoCom32"  Alias "_BscOutBytes@4"(ByVal nCid As Short) As Short
	Declare Function BscPMov Lib "MotoCom32"  Alias "_BscPMov@28"(ByVal nCid As Short, ByVal movtype As String, ByVal vtype As String, ByVal spd As Double, ByVal toolno As Short, ByRef p As Double) As Short
	Declare Function BscPMovEx Lib "MotoCom32"  Alias "_BscPMovEx@32"(ByVal nCid As Short, ByVal movtype As String, ByVal vtype As String, ByVal spd As Double, ByVal toolno As Short, ByRef p As Double, ByVal axisNum As Short) As Short
	Declare Function BscPMovj Lib "MotoCom32"  Alias "_BscPMovj@20"(ByVal nCid As Short, ByVal spd As Double, ByVal toolno As Short, ByRef p As Double) As Short
	Declare Function BscPMovjEx Lib "MotoCom32"  Alias "_BscPMovjEx@24"(ByVal nCid As Short, ByVal spd As Double, ByVal toolno As Short, ByRef p As Double, ByVal axisNum As Short) As Short
	Declare Function BscPMovl Lib "MotoCom32"  Alias "_BscPMovl@24"(ByVal nCid As Short, ByVal vtype As String, ByVal spd As Double, ByVal toolno As Short, ByRef p As Double) As Short
	Declare Function BscPMovlEx Lib "MotoCom32"  Alias "_BscPMovlEx@28"(ByVal nCid As Short, ByVal vtype As String, ByVal spd As Double, ByVal toolno As Short, ByRef p As Double, ByVal axisNum As Short) As Short
	Declare Function BscPuts Lib "MotoCom32"  Alias "_BscPuts@12"(ByVal nCid As Short, ByVal bufptr As String, ByVal length As Short) As Short
	Declare Function BscPutUFrame Lib "MotoCom32"  Alias "_BscPutUFrame@12"(ByVal nCid As Short, ByVal ufname As String, ByRef p As Double) As Short
	Declare Function BscPutVarData Lib "MotoCom32"  Alias "_BscPutVarData@16"(ByVal nCid As Short, ByVal type_v As Short, ByVal varno As Short, ByRef dat As Double) As Short
	Declare Function BscPutVarData2 Lib "MotoCom32"  Alias "_BscPutVarData2@20"(ByVal nCid As Short, ByVal type_v As Short, ByVal varno As Short, ByRef dat As Double, ByVal axisNum As Short) As Short
	Declare Function BscPutVarDataEx Lib "MotoCom32"  Alias "_BscPutVarDataEx@24"(ByVal nCid As Short, ByVal type_v As Short, ByVal varno As Short, ByRef dat As Double, ByVal s As String, ByVal axisNum As Short) As Short
	Declare Function BscReadAlarmS Lib "MotoCom32"  Alias "_BscReadAlarmS@12"(ByVal nCid As Short, ByRef data_v As Short, ByVal s As String) As Short
	Declare Function BscReadIO Lib "MotoCom32"  Alias "_BscReadIO@16"(ByVal nCid As Short, ByVal startadd As Short, ByVal ionum As Short, ByRef stat As Short) As Short
	Declare Function BscReadIO2 Lib "MotoCom32"  Alias "_BscReadIO2@16"(ByVal nCid As Short, ByVal startadd As Integer, ByVal ionum As Short, ByRef stat As Short) As Short
	Declare Function BscReConnect Lib "MotoCom32"  Alias "_BscReConnect@4"(ByVal nCid As Short) As Short
	Declare Function BscReset Lib "MotoCom32"  Alias "_BscReset@4"(ByVal nCid As Short) As Short
	Declare Function BscReStartJob Lib "MotoCom32"  Alias "_BscReStartJob@4"(ByVal nCid As Short) As Short
	Declare Function BscSelectJob Lib "MotoCom32"  Alias "_BscSelectJob@8"(ByVal nCid As Short, ByVal name_v As String) As Short
	Declare Function BscSelectMode Lib "MotoCom32"  Alias "_BscSelectMode@8"(ByVal nCid As Short, ByVal mode As Short) As Short
	Declare Function BscSelLoopCycle Lib "MotoCom32"  Alias "_BscSelLoopCycle@4"(ByVal nCid As Short) As Short
	Declare Function BscSelOneCycle Lib "MotoCom32"  Alias "_BscSelOneCycle@4"(ByVal nCid As Short) As Short
	Declare Function BscSelStepCycle Lib "MotoCom32"  Alias "_BscSelStepCycle@4"(ByVal nCid As Short) As Short
	Declare Function BscServoOff Lib "MotoCom32"  Alias "_BscServoOff@4"(ByVal nCid As Short) As Short
	Declare Function BscServoOn Lib "MotoCom32"  Alias "_BscServoOn@4"(ByVal nCid As Short) As Short
	'Declare Function BscSetAbso Lib "MotoCom32" Alias "_BscSetAbso@12" (ByVal nCid%, ByVal axisno%, ByVal abso&) As Integer
	Declare Function BscSetBreak Lib "MotoCom32"  Alias "_BscSetBreak@8"(ByVal nCid As Short, ByVal flg As Short) As Short
	Declare Function BscSetCom Lib "MotoCom32"  Alias "_BscSetCom@24"(ByVal nCid As Short, ByVal port As Short, ByVal baud As Integer, ByVal parity As Short, ByVal clen As Short, ByVal stp As Short) As Short
	Declare Function BscSetCondBSC Lib "MotoCom32"  Alias "_BscSetCondBSC@20"(ByVal nCid As Short, ByVal timerA As Short, ByVal timerB As Short, ByVal rtyR As Short, ByVal rtyW As Short) As Short
	Declare Function BscSetCtrlGroup Lib "MotoCom32"  Alias "_BscSetCtrlGroup@8"(ByVal nCid As Short, ByVal groupno As Short) As Short
	Declare Function BscSetCtrlGroupDx Lib "MotoCom32"  Alias "_BscSetCtrlGroupDx@12"(ByVal nCid As Short, ByVal groupno1 As Integer, ByVal groupno2 As Integer) As Short
	Declare Function BscSetCtrlGroupXrc Lib "MotoCom32"  Alias "_BscSetCtrlGroupXrc@12"(ByVal nCid As Short, ByVal groupno1 As Short, ByVal groupno2 As Short) As Short
	Declare Function BscSetEServer Lib "MotoCom32"  Alias "_BscSetEServer@8"(ByVal nCid As Short, ByVal IPaddr As String) As Short
	Declare Function BscSetEServerMode Lib "MotoCom32"  Alias "_BscSetEServerMode@12"(ByVal nCid As Short, ByVal IPaddr As String, ByVal mode As Short) As Short
	Declare Function BscSetEther Lib "MotoCom32"  Alias "_BscSetEther@16"(ByVal nCid As Short, ByVal IPaddr As String, ByVal mode As Short, ByVal hWnd As Integer) As Short
	'Declare Function BscSetHSL Lib "MotoCom32" Alias "_BscSetHSL@12" (ByVal nCid%, ByVal strName$, ByVal port%) As Integer
	Declare Function BscSetLineNumber Lib "MotoCom32"  Alias "_BscSetLineNumber@8"(ByVal nCid As Short, ByVal line_v As Short) As Short
	Declare Function BscSetMasterJob Lib "MotoCom32"  Alias "_BscSetMasterJob@4"(ByVal nCid As Short) As Short
	Declare Function BscStartJob Lib "MotoCom32"  Alias "_BscStartJob@4"(ByVal nCid As Short) As Short
	Declare Function BscStatus Lib "MotoCom32"  Alias "_BscStatus@20"(ByVal nCid As Short, ByVal hpt As String, ByVal dpt As String, ByVal sz As Short, ByVal rbuf As String) As Short
	Declare Function BscUpLoad Lib "MotoCom32"  Alias "_BscUpLoad@8"(ByVal nCid As Short, ByVal fname As String) As Short
	Declare Function BscUpLoadEx Lib "MotoCom32"  Alias "_BscUpLoadEx@16"(ByVal nCid As Short, ByVal fname As String, ByVal desPath As String, ByVal nFlg As Boolean) As Short
	'Declare Function BscUpLoadTRQ_HM Lib "MotoCom32" Alias "_BscUpLoadTRQ_HM@16" (ByVal nCid%, ByVal fname$, ByVal nType, ByVal nNo) As Integer
	'Declare Function BscUpLoadTRQ Lib "MotoCom32" Alias "_BscUpLoadTRQ@8" (ByVal nCid%, ByVal fname$) As Integer
	Declare Function BscWriteIO Lib "MotoCom32"  Alias "_BscWriteIO@16"(ByVal nCid As Short, ByVal startadd As Short, ByVal ionum As Short, ByRef stat As Short) As Short
	Declare Function BscWriteIO2 Lib "MotoCom32"  Alias "_BscWriteIO2@16"(ByVal nCid As Short, ByVal startadd As Integer, ByVal ionum As Short, ByRef stat As Short) As Short
	
	' /****************************************************/
	' /****************   FC1,FC2 *************************/
	' /****************************************************/
	' /* FCWIN.H */
	' /*************** Slave Command /I am FC1. ***********************/
	' /* DOS  COM1:96,E,8,1 */
	' /* Win FC1 COM1:4800,E,8,1 */
	' /* Win FC2 COM1:19200,E,8,1 */
	Declare Function FcClose Lib "MotoCom32"  Alias "_FcClose@4"(ByVal nCid As Short) As Short
	Declare Function FcConnect Lib "MotoCom32"  Alias "_FcConnect@4"(ByVal nCid As Short) As Short
	Declare Function FcDisConnect Lib "MotoCom32"  Alias "_FcDisConnect@4"(ByVal nCid As Short) As Short
	Declare Function FcGetCom Lib "MotoCom32"  Alias "_FcGetCom@12"(ByVal nCid As Short, ByVal buf As String, ByVal size As Short) As Short
	Declare Function FcGetData Lib "MotoCom32"  Alias "_FcGetData@12"(ByVal nCid As Short, ByVal buf As String, ByVal size As Short) As Short
	Declare Function FcGetPath Lib "MotoCom32"  Alias "_FcGetPath@12"(ByVal nCid As Short, ByVal buf As String, ByVal size As Short) As Short
	Declare Function FcOpen Lib "MotoCom32"  Alias "_FcOpen@8"(ByVal path As String, ByVal mode As Short) As Short
	Declare Function FcProc Lib "MotoCom32"  Alias "_FcProc@8"(ByVal nCid As Short, ByVal isremove As Short) As Short
	Declare Function FcScan Lib "MotoCom32"  Alias "_FcScan@4"(ByVal nCid As Short) As Short
	Declare Function FcSetBreak Lib "MotoCom32"  Alias "_FcSetBreak@8"(ByVal nCid As Short, ByVal flg As Short) As Short
	Declare Function FcSetCom Lib "MotoCom32"  Alias "_FcSetCom@24"(ByVal nCid As Short, ByVal port As Short, ByVal baud As Integer, ByVal parity As Short, ByVal clen As Short, ByVal stp As Short) As Short
	Declare Function FcSetHSL Lib "MotoCom32"  Alias "_FcSetHSL@12"(ByVal nCid As Short, ByVal strName As String, ByVal port As Short) As Short
